Major Update -Update style of webpage -fix overflow issue -fix grid layout -fix operation issue where previous operation would be saved after equals was pressed -Add footer and header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class = "title">Calculator</header>
     <div id="container"></div>
+    <footer><a href ='https://github.com/Jhamilton01' target="_blank">Jess Hamilton </a><img src="img/github-mark.png"></footer>
 </body>
 </html>
